[tool.poetry]
name = "txbindings"
version = "0.1.0"
description = ""
authors = ["Felix Ingram"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = {extras = ["dev"], version = "^0.5.0"}


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
